# rs-listen-ports2arrow-ipc

./: Cargo.toml  README.md  build.sh  example.sh  listen-ports2arrow-ipc
src/: lib.rs
