[package]
name = "rs-listen-ports2arrow-ipc"
version = "0.1.0"
edition = "2024"

description = "Shows the ports info as an arrow ipc stream."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-listen-ports2arrow-ipc"
homepage = "https://github.com/takanoriyanagitani/rs-listen-ports2arrow-ipc"
documentation = "https://docs.rs/rs-listen-ports2arrow-ipc/latest"
keywords = ["arrow", "ipc", "stream", "listen", "port"]

exclude = [
	"listen-ports2arrow-ipc",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[[bin]]
name = "listen-ports2arrow-ipc"

[dependencies.listeners]
version = "0.3"
default-features = false
features = [
]

[dependencies.arrow]
version = "57"
default-features = false
features = [
	"ipc",
]
